syntax = "proto3";

option csharp_namespace = "TelegramBotService";

package greet;

// The greeting service definition.
service Telegrams {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
